# audio-rec

./: CMakeLists.txt  LICENSE  README.md
api/: audiorec.h  audiorec.mm
example/: main.mm
